# truffle

./: .gitignore  .travis.yml  GNUmakefile  Makefile.am  README  README.md  configure.ac  git-version-gen  index.md  version.m4
_layouts/: default.html  project.html
build-aux/: Makefile.am
info/: Makefile.am  author.h2m  trod.name  truffle.name
m4/: sxe-compiler.m4  sxe-dfp754.m4  sxe-yuck.m4
src/: Makefile.am  actcon.c  actcon.h  coru.h  cut.c  cut.h  daisy.c  daisy.h  dfp754_d32.c  dfp754_d32.h  dfp754_d64.c  dfp754_d64.h  dt-strpf.c  dt-strpf.h  gbs.c  gq.c  gq.h  idate.c  idate.h  instant.c  instant.h  mmy.c  mmy.h  nifty.h  rpaf.c  rpaf.h  schema.c  schema.h  series.c  series.h  step.c  step.h  str.c  str.h  sym.c  sym.h  trod-clo.ggo  trod.c  trod.h  truck.c  (+13 more)
src/coru/: coro.c  coro.h  ctxt.h  switch.c  tls.h
test/: Makefile.am  check-truffle.sh  expcon_01.clit  expcon_02.clit  expcon_03.clit  expcon_04.clit  expcon_05.clit  expcon_06.clit  filt_01.tser  filt_02.tser  filter_01.clit  filter_02.clit  filter_03.clit  filter_04.clit  filter_05.clit  filter_06.clit  filter_07.clit  filter_08.clit  filter_09.clit  filter_10.clit  filter_11.clit  filter_12.clit  glue_01.clit  glue_01.trod  glue_01.tser  glue_02.clit  glue_02.trod  glue_02.tser  glue_03.clit  glue_03.tser  glue_04.clit  glue_05.clit  glue_06.clit  glue_07.clit  glue_08.clit  glue_09.clit  glue_10.clit  glue_11.clit  glue_12.clit  glue_13.clit  (+204 more)
